syntax = "proto3";

option csharp_namespace = "GrpcServiceSample.Core";

package hello;

// The greeting service definition.
service Hello {
  // Sends a greeting
  rpc HelloWorld (HelloWorldRequest) returns (HelloWorldResponse);
}

// The request message containing the user's name.
message HelloWorldRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloWorldResponse {
  string message = 1;
}
